# tnt_vectornet_with_tensorrt

./: .gitignore  README.md  TODO.md  candidate.txt
assets/: README_old.md  Untitled.ipynb  mlp.py  t.onnx
assets/cpp/: CMakeLists.txt  vectornet_s.cpp
assets/cpp/mlp/: my_mlp.wts
assets/cpp/sub_graph/: sub_graph.wts
assets/export/: vectornet_export_v1.py
assets/export/models/: fake_vectornet.onnx  traced_vectornet.pt
dataset/: data_augment.py  sampler.py  sg_dataloader.py  sg_preprocess.py  sg_preprocess_all_agents.py
dataset/sg_rosbag_process/: generate_ego_traj_feature.py  get_sensor_data_from_bag.py  lc_filter.py  pipeline_ego.py  scene_filter.py  visualize_traj.py
dataset/util/: cubic_spline.py  traj_clustering.py  vis_utils_v2.py
docs/: VectorNet.txt
mini_data/train/: data_seq_0_features.pkl  data_seq_100_features.pkl  data_seq_101_features.pkl  data_seq_102_features.pkl  data_seq_103_features.pkl  data_seq_105_features.pkl  data_seq_106_features.pkl  data_seq_107_features.pkl  data_seq_108_features.pkl  data_seq_10_features.pkl  data_seq_110_features.pkl  data_seq_111_features.pkl  data_seq_112_features.pkl  data_seq_113_features.pkl  data_seq_115_features.pkl  data_seq_116_features.pkl  data_seq_117_features.pkl  data_seq_118_features.pkl  data_seq_11_features.pkl  data_seq_120_features.pkl  data_seq_121_features.pkl  data_seq_122_features.pkl  data_seq_123_features.pkl  data_seq_125_features.pkl  data_seq_126_features.pkl  data_seq_127_features.pkl  data_seq_128_features.pkl  data_seq_12_features.pkl  data_seq_130_features.pkl  data_seq_131_features.pkl  data_seq_132_features.pkl  data_seq_133_features.pkl  data_seq_135_features.pkl  data_seq_136_features.pkl  data_seq_137_features.pkl  data_seq_138_features.pkl  data_seq_13_features.pkl  data_seq_140_features.pkl  data_seq_141_features.pkl  data_seq_142_features.pkl  (+420 more)
mini_data/val/: data_seq_104_features.pkl  data_seq_109_features.pkl  data_seq_114_features.pkl  data_seq_119_features.pkl  data_seq_124_features.pkl  data_seq_129_features.pkl  data_seq_134_features.pkl  data_seq_139_features.pkl  data_seq_144_features.pkl  data_seq_149_features.pkl  data_seq_14_features.pkl  data_seq_154_features.pkl  data_seq_159_features.pkl  data_seq_164_features.pkl  data_seq_169_features.pkl  data_seq_174_features.pkl  data_seq_179_features.pkl  data_seq_184_features.pkl  data_seq_189_features.pkl  data_seq_194_features.pkl  data_seq_199_features.pkl  data_seq_19_features.pkl  data_seq_204_features.pkl  data_seq_209_features.pkl  data_seq_214_features.pkl  data_seq_219_features.pkl  data_seq_224_features.pkl  data_seq_229_features.pkl  data_seq_234_features.pkl  data_seq_239_features.pkl  data_seq_244_features.pkl  data_seq_249_features.pkl  data_seq_24_features.pkl  data_seq_254_features.pkl  data_seq_259_features.pkl  data_seq_264_features.pkl  data_seq_269_features.pkl  data_seq_274_features.pkl  data_seq_279_features.pkl  data_seq_284_features.pkl  (+74 more)
model/: tnt.py  vectornet.py
model/backbone/: vectornet_backbone.py
model/layers/: global_graph.py  global_graph_multihead.py  mlp.py  motion_etimation.py  scoring_and_selection.py  subgraph.py  target_prediction.py
model/loss/: __init__.py  loss.py
scripts/: test.sh  train_fintune.sh  train_scratch.sh
tensorrt_deploy/: README.md
tensorrt_deploy/src/: test.cpp  vectornet.h
tensorrt_deploy/tnt_trt/: README.md  export_tnt_head_onnx.py  tnt.wts  tnt_0529_c400.wts  tnt_0606exp2_balance.wts  tnt_compare.py  tnt_compare2.py  tnt_export_wts.py
tensorrt_deploy/tnt_trt/cpp/: .clang-format  CMakeLists.txt  data.h  layer.h  test.cpp  tnt.cpp  tnt.h  utils.cpp  utils.h
tensorrt_deploy/vectornet_trt/: vectornet_export_wts.py
tensorrt_deploy/vectornet_trt/src/: CMakeLists.txt  layer.h
tensorrt_deploy/vectornet_trt/src/Plugin/layerNormPlugin/: layerNormKernel.cu  layerNormKernel.h  layerNormPlugin.h
tensorrt_deploy/vectornet_trt/src/Plugin/scatterMaxPlugin/: scatterMaxKernel.cu  scatterMaxKernel.h  scatterMaxPlugin.h
tools/: analysis_anchor.py  analysis_traj_type.py  auto_preprocess_pipeline.py  test_tnt.py  test_vectornet.py  train_tnt.py  train_vectornet.py  viz_dataset.py
tools/export/: data_seq_40050_features.pkl  vectornet_export_v1.py  vectornet_export_v2.py  vectornet_export_v3.py
tools/export/cpp/: CMakeLists.txt  test.cpp
tools/export/cpp_libtorch/: CMakeLists.txt  test.cpp
tools/tensorrtx/: CMakeLists.txt  layer.h  mlp.engine  mlp.py  sub_graph.py  vectornet.cpp  vectornet.engine
tools/tensorrtx/Plugin/layerNormPlugin/: layerNormKernel.cu  layerNormKernel.h  layerNormPlugin.cpp  layerNormPlugin.h
tools/tensorrtx/Plugin/scatterMaxNoPaddingPlugin/: scatterMaxNoPaddingKernel.cu  scatterMaxNoPaddingKernel.h  scatterMaxNoPaddingPlugin.cpp  scatterMaxNoPaddingPlugin.h
tools/tensorrtx/Plugin/scatterMaxPlugin/: scatterMaxKernel.cu  scatterMaxKernel.h  scatterMaxPlugin.cpp  scatterMaxPlugin.h
trainer/: __init__.py  basic_trainer.py  optim_schedule.py  tnt_trainer.py  vectornet_trainer.py
weights/: sg_best_TNT.pth  sg_best_TNT_0505.pth  sg_best_TNT_0529.pth  sg_best_v1.pth  tnt_0612_EXP8_hd_dm_d10_bal.pth
(+14 files in other folders)
